test/invalid-semantics/59809_comparing_missmatch_types/comparing_missmatch_types.mag
-- Author: 59809, Manuel Leitão

fun main (_) : Unit -> Unit =
    if 5 == "five" then print(1) else print(0)